Update .gitignore to exclude more files
Added additional entries to .gitignore for various files and directories.

--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,27 @@ __pycache__/
 # Virtual environments
 venv/
 .venv/
+env/
 
 # Logs
 *.log
+log.txt
 
 # Generated reports
 reports/
+izvjestaji/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
 # OS files
 .DS_Store
 Thumbs.db
+
+# Python distribution
+*.egg-info/
+dist/
+build/
